--- a/style/tabela.css
+++ b/style/tabela.css
@@ -16,18 +16,19 @@ table{
     align-items: center;
     justify-content: center;
     padding: 5%;
-    
     width: 100%;
-    height: 100%;
-    
+    height: 100%;    
 }
 
 tbody{
     width: 100%;
     height: 100%;
+    border-bottom: 4px solid rgb(255, 255, 255);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
-.cabecalho{
+.cabecalho {
     background-color: #f77594;
     display: flex;
     justify-content: center;
@@ -36,27 +37,33 @@ tbody{
     border-top-right-radius: 10px;
     border-bottom: none;
     font-size: 100%;
-    padding: 10px ;
-}
-
-.itensTabela{
+    padding-top: 10px;
+    padding-bottom: 10px;
     width: 100%;
     height: 100%;
-}
-
-td{
-    padding-top: 10px;
+  }
+  
+tr.cabecalho th{
+    text-align: center;
+    width: 100%;
+    height: 100%;
+  }
+  
+  td {
+    padding-top: 5px;
+    padding-bottom: 5px;
     font-size: medium;
     width: 100%;
     display: flex;
     justify-content: center;
-}
-
-#itensTabela{
+  }
+  
+  #itensTabela {
     display: flex;
     justify-content: center;
     font-size: medium;
     border: 4px solid rgb(255, 255, 255);
     border-top: 2px;
     border-bottom: 2px;
-}
+  }
+  
