--- a/style/tabela.css
+++ b/style/tabela.css
@@ -56,6 +56,7 @@ tr.cabecalho th{
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
   }
   
   #itensTabela {
@@ -65,5 +66,6 @@ tr.cabecalho th{
     border: 4px solid rgb(255, 255, 255);
     border-top: 2px;
     border-bottom: 2px;
+    align-items: center;
   }
-  
+
