--- a/style/tabela.css
+++ b/style/tabela.css
@@ -1,5 +1,6 @@
 .body{
     display: flex;
+    flex-direction: column;
     background-color:  #faa1b5;
 }
 
@@ -15,7 +16,9 @@ table{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 5%;
+    padding-top: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
     width: 100%;
     height: 100%;    
 }
