--- a/style/tabela.css
+++ b/style/tabela.css
@@ -4,10 +4,27 @@
     background-color:  #faa1b5;
 }
 
+/* CAMPO DE FILTRO */
+
+.filtro{
+  height: 30%;
+  width: 100%;
+  padding: 1%;
+  display: flex;
+  justify-content:space-around;
+}
+
+.busca{
+  border-radius: 5%;
+}
+
+
+
 .tabela{
     display: flex;
     width: 100%;
     height: 100%;
+    padding-top: 3%;
     justify-content: center;
     align-items: center
 }
@@ -16,9 +33,6 @@ table{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 3%;
-    padding-left: 5%;
-    padding-right: 5%;
     width: 100%;
     height: 100%;    
 }
@@ -72,3 +86,39 @@ tr.cabecalho th{
     align-items: center;
   }
 
+.botoes{
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding: 2%;
+  gap: 3%;
+}
+
+.paginacao{
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  height: 40px;
+  width: 100%;
+  padding-top: 6px;
+  border-bottom: 4px solid rgb(255, 255, 255);
+  border-left: 4px solid rgb(255, 255, 255);
+  border-right: 4px solid rgb(255, 255, 255);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-color: #f77594;
+}
+
+.pagination{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5%;
+  height: 100%;
+  width: 100%;
+  gap: 4%;
+  color: black;
+}
