--- a/style/tabela.css
+++ b/style/tabela.css
@@ -1,7 +1,21 @@
+:root{
+  /* ===== Colors ===== */
+  --sidebar-color: #d8c3f4;
+  --primary-color: #5f20b1;
+  --primary-color-light: #ece1f9;
+  --text-color: #020104;
+  --background-color: #ece1f9;
+  --border-table: 4px solid #5f20b1;
+  --color-cabecalho: #d8c3f4;
+  --button-collor: #5f20b1;
+  --text-button: #ece1f9;
+
+}
+
 .body{
     display: flex;
     flex-direction: column;
-    background-color:  #faa1b5;
+    background-color: var(--primary-color-light);
 }
 
 /* CAMPO DE FILTRO */
@@ -21,12 +35,14 @@
 
 
 .tabela{
+    color: var(--text-color);
     display: flex;
     width: 100%;
     height: 100%;
     padding-top: 3%;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    background-color: var(--primary-color-light);
 }
 
 table{
@@ -40,16 +56,15 @@ table{
 tbody{
     width: 100%;
     height: 100%;
-    border-bottom: 4px solid rgb(255, 255, 255);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
 
 .cabecalho {
-    background-color: #f77594;
+    background-color:  var(--color-cabecalho);
     display: flex;
     justify-content: center;
-    border: 4px solid rgb(255, 255, 255);
+    border: var(--border-table);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom: none;
@@ -80,7 +95,7 @@ tr.cabecalho th{
     display: flex;
     justify-content: center;
     font-size: medium;
-    border: 4px solid rgb(255, 255, 255);
+    border: var(--border-table);
     border-top: 2px;
     border-bottom: 2px;
     align-items: center;
@@ -95,7 +110,7 @@ tr.cabecalho th{
 }
 
 .paginacao{
-  color: black;
+  color: var(--text-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -103,12 +118,12 @@ tr.cabecalho th{
   height: 40px;
   width: 100%;
   padding-top: 6px;
-  border-bottom: 4px solid rgb(255, 255, 255);
-  border-left: 4px solid rgb(255, 255, 255);
-  border-right: 4px solid rgb(255, 255, 255);
+  border-bottom: var(--border-table);
+  border-left: var(--border-table);
+  border-right: var(--border-table);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  background-color: #f77594;
+  background-color:  var(--color-cabecalho);
 }
 
 .pagination{
@@ -121,4 +136,27 @@ tr.cabecalho th{
   width: 100%;
   gap: 4%;
   color: black;
+}
+
+.botao{
+  background-color: var(--button-collor);
+  color: var(--color-cabecalho);
+  border: none;
+}
+
+.tBot{
+  width: 100px;
+}
+
+
+
+.content {
+  margin-left: 200px;
+  /* Deixa um espaço para a sidebar */
+  transition: margin-left 0.3s ease;
+}
+
+.content.shifted {
+  margin-left: 0;
+  /* Desloca o conteúdo quando a classe 'shifted' é adicionada */
 }
