--- a/style/index.css
+++ b/style/index.css
@@ -1,43 +1,64 @@
 @import url("./root.css");
 
-.principal {
-    width: 100%;
-    height: 10vh;
-    display: flex;
-    flex-direction: column;
-}
-
-.itens {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    background-color: #f77594;
-    height: 10vh;
-    justify-content: center;
-    align-items: center;
-    padding: 0.5%;
-}
-
-.lista-centralizada{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    height: 100%;
-    width: 100%;
-    gap: 4%;
+.body{
+    background-color:  var(--background-color);
+    margin-left: 6rem;
+    padding: 15px;
     
 }
 
-ul,
-li,
-a {
-    color: aliceblue;
+.card a{ 
+    text-decoration: none;
+    color: var(--text-color);
+} 
+.tudo{
+    color: var(--text-color);
+    flex-wrap: nowrap;
+}
+
+.card-container {
+    display: inline-grid;
+    grid-template-columns: auto auto auto auto auto;
+    gap: 10px;
+    column-gap: 10px;
+    flex-wrap: nowrap;
+  }
+  
+  .card {
+    background-color: var(--sidebar-color);
+    color: var(--text-color);
+    min-width: 15%;
+    transition: 0.3s ease;
+  }
+  
+  .card:hover {
+    background-color: var(--primary-color);
+    color: var(--text-button);
+    transform: scale(1.1);
+    z-index: 1;
+  }
+  
+
+  .card:hover ~ .card {
+    transform: translateX(2%);/* Desloca os outros cards para a direita */
+  }
+/*   
+  .card:hover ~ .card:hover {
+    transform: translateX(40px); 
+  } 
+  */
+  .card:hover a{
+    color: var(--text-button);
+  }
+  .imgCard img{
+    height: 60px;
+    width: 60px;
+  }
+
+  .itens-card{
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-    text-decoration: none;
-
-}
+    gap: 20px;
+  }
