--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -45,7 +45,8 @@
     z-index: 100;  
 }
 .sidebar.close{
-    width: 88px;
+    /* width: 88px; */
+    width: 5.2rem;
 }
 
 /* ===== Reusable code - Here ===== */
